fix greyline length and z-indexing

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -269,13 +269,11 @@ h3 {
 	content: "";
 	background: rgb(196, 207, 214);
 	width: 2px;
-	height: 108px;
+	height: 100%;
 	position: absolute;
-	top: 105%;
-	left: 0;
+	top: 1.9rem;
+	left: 1.4rem;
 	right: 0;
-	margin-left: auto;
-	margin-right: auto;
 	z-index: 1;
 }
 
