--- a/src/style/_menu.scss
+++ b/src/style/_menu.scss
@@ -17,12 +17,12 @@
 		height: 8vh;
 		flex-direction: row;
 		background-color: white;
-		z-index: 1;
 		width: 100vw;
 		left: 0;
 		justify-content: space-around;
 		align-items: center;
 		padding: 0.75rem;
+		z-index: 3;
 	}
 }
 
