--- a/src/style/_profile.scss
+++ b/src/style/_profile.scss
@@ -7,8 +7,8 @@
 	display: flex;
 	align-items: center;
 	position: sticky;
-	top: 0vh;
-	z-index: 1;
+	top: 0;
+	z-index: 3;
 	background-color: white;
 	border-bottom: $siteborder;
 	border-right: $siteborder;
